correçoes dto de usuario